--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,3 +5,5 @@ on: [push]
 jobs:
   call-test:
     uses: clojure/build.ci/.github/workflows/test.yml@master
+      with:
+        java_versions: ["11" "17"]
