inherit secrets in snapshot workflow

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -5,3 +5,4 @@ on: [workflow_dispatch]
 jobs:
   call-snapshot:
     uses: clojure/build.ci/.github/workflows/snapshot.yml@master
+    secrets: inherit
