--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,29 @@
 name: Test
 
-on: [push]
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
-  call-test:
-    uses: clojure/build.ci/.github/workflows/test.yml@master
+  test:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest] # macOS-latest, windows-latest]
+        java-version: ["8", "11", "17"]
+        distribution: ["temurin", "corretto"]
+        profile: ["test-direct", "test-no-direct"]
+        include:
+          - distribution: "oracle"
+            java-version: "17"
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ matrix.java-version }}
+        distribution: ${{ matrix.distribution }}
+        cache: 'maven'
+    - name: Build with Maven
+      run: echo "hi"
