--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -30,7 +30,7 @@ jobs:
         java-version: 8
         distribution: 'temurin'
         cache: 'maven'
-        server-id: sonatype-nexus-staging
+        server-id: central
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
         gpg-private-key: ${{ secrets.CENTRAL_GPG_SECRET_KEY }}
