--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
     <tag>HEAD</tag>
   </scm>
 
+  <distributionManagement>
+    <repository>
+      <id>central</id>
+      <url>https://central.sonatype.com</url>
+    </repository>
+  </distributionManagement>
+
   <build>
     <plugins>
       <plugin>
