reverting gh action invocation

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.clojure</groupId>
   <artifactId>buildtest</artifactId>
-  <version>0.3.0</version>
+  <version>0.3.1-SNAPSHOT</version>
   <name>buildtest</name>
   <description>Dummy project for build and deployment testing</description>
   <url>https://github.com/clojure/build.test</url>
