--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -36,7 +36,7 @@ jobs:
         gpg-private-key: ${{ secrets.CENTRAL_GPG_SECRET_KEY }}
         gpg-passphrase: GPG_PASSPHRASE
     - name: Publish to Maven OSS Server
-      run: mvn -ntp -B -Psign -Dmaven.test.skip=true -DreleaseVersion=${{ github.event.inputs.releaseVersion }} -DdevelopmentVersion=${{ github.event.inputs.snapshotVersion }} deploy
+      run: mvn -ntp -B -DreleaseVersion=${{ github.event.inputs.releaseVersion }} -DdevelopmentVersion=${{ github.event.inputs.snapshotVersion }} -DskipStaging=true -Psign -Dmaven.test.skip=true release:prepare release:perform
       env:
         MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
