--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+	<version>3.3.1</version>
+      </plugin>
+      <plugin>
         <!-- Add Clojure sources to the project's source directories -->
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
