--- a/.github/workflows/new-snapshot.yml
+++ b/.github/workflows/new-snapshot.yml
@@ -22,7 +22,7 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
     - name: Publish to Maven
-      run: mvn -ntp -B --fail-at-end -Dmaven.test.skip=true clean deploy
+      run: mvn -ntp -X -e -B --fail-at-end -Dmaven.test.skip=true clean deploy
       env:
         MAVEN_USERNAME: ${{ secrets.CENTRAL_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASSWORD }}
