--- a/.github/workflows/new-snapshot.yml
+++ b/.github/workflows/new-snapshot.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: 8
         distribution: 'temurin'
         cache: 'maven'
-        server-id: central
+        server-id: central-snapshot
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
     - name: Publish to Maven
