--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
     <repository>
       <id>central</id>
       <url>https://central.sonatype.com</url>
+    </repository>
+    <repository>
+      <id>central-snapshot</id>
+      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
