--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,10 @@
       <id>central</id>
       <url>https://central.sonatype.com</url>
     </repository>
-    <repository>
+    <snapshotRepository>
       <id>central-snapshot</id>
       <url>https://central.sonatype.com/repository/maven-snapshots/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
+    </snapshotRepository>
   </distributionManagement>
   
   <build>
